# cpp_advanced_single_dispatch

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt  CallingConvention.h  Delegate.h  DelegateTraits.h  FunctionPointer.h  FunctionTraits.h  FunctorTraits.h  FunctorWrapper.h  MethodPointer.h  MethodTraits.h  SingleDispatch.cpp  SingleDispatch.h  Task.h  Utils.h
lib/HeaderOnly/: AdvancedSingleDispatch.h
source/: CMakeLists.txt
source/Examples/: CMakeLists.txt
source/Lib/: CMakeLists.txt
tests/: CMakeLists.txt  main.cpp
tests/tests/: FnPtrTests.h  FunctorWrapperTests.h  MethodPtrTests.h  RawDelegateTests.h  SharedDelegateTests.h  TaskTests.h  UniqueDelegateTests.h
